fix(theme-yun): too long tags & categories style optimize, close #188

--- a/packages/valaxy-theme-yun/styles/layout/post.scss
+++ b/packages/valaxy-theme-yun/styles/layout/post.scss
@@ -91,6 +91,11 @@
   }
 }
 
+// category
+.post-category {
+  color: var(--va-c-text);
+}
+
 .post-tag {
   white-space: nowrap;
   color: var(--yun-tag-color);
